ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/Assistance_Request__c.object-meta.xml
<CustomObject>
    <description>The Assistance Request object stores your requests for assistance using the Artisan Assistance application.</description>
    <label>Assistance Request</label>
    <nameField>
        <displayFormat>REQ{00000000}</displayFormat>
        <label>Request Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assistance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>