ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <inlineHelpText>How much did it cost to complete this request actually start?</inlineHelpText>
    <label>Actual Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>