ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Actual_Cost_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_Commentary__c</fullName>
    <inlineHelpText>Commentary about the actual duration, effort and cost</inlineHelpText>
    <label>Actual Cost Commentary</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>