ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <inlineHelpText>On what date did the work to complete this request actually finish?</inlineHelpText>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>