ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Actual_Person_Days__c.field-meta.xml
<CustomField>
    <fullName>Actual_Person_Days__c</fullName>
    <inlineHelpText>How many days of effort it actually took to complete this request</inlineHelpText>
    <label>Actual Person Days</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>