ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <inlineHelpText>On what date did the work to complete this request actually start?</inlineHelpText>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>