ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Artisan_Case_SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>Artisan_Case_SystemModstamp__c</fullName>
    <inlineHelpText>The SystemModstamp field in the Artisan Case record when last sync&#39;d</inlineHelpText>
    <label>Artisan Case SystemModstamp</label>
    <type>DateTime</type>
</CustomField>