ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Date_Required__c</fullName>
    <inlineHelpText>When do you need this completed by (leave blank if not known)</inlineHelpText>
    <label>Required by Date</label>
    <type>Date</type>
</CustomField>