ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Describe what business outcome you need to achieve together with any technical insights about how you want the work to be done</inlineHelpText>
    <label>Business Outcome Required</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>