ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <inlineHelpText>What cost is estimated in the stated currency as necessary to complete this task?</inlineHelpText>
    <label>Estimated Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>