ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Estimated_Cost_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_Commentary__c</fullName>
    <inlineHelpText>Commentary about the estimated duration, effort and cost</inlineHelpText>
    <label>Estimated Cost Commentary</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>