ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Estimated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_End_Date__c</fullName>
    <inlineHelpText>What date could the work to complete this request finish?</inlineHelpText>
    <label>Estimated End Date</label>
    <type>Date</type>
</CustomField>