ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Estimated_Person_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Person_Days__c</fullName>
    <inlineHelpText>How many days of effort is estimated as necessary to complete this request?</inlineHelpText>
    <label>Estimated Person Days</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>