ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <inlineHelpText>What date could the work to complete this request begin?</inlineHelpText>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>