ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>OR(
ISPICKVAL( Phase__c, &#39;Estimation&#39; ),
ISPICKVAL( Phase__c, &#39;Development&#39; ),
ISPICKVAL( Phase__c, &#39;Test&#39; ),
ISPICKVAL( Phase__c, &#39;Deployment&#39; ),
ISPICKVAL( Phase__c, &#39;Acceptance&#39; ),
ISPICKVAL( Stage_Name__c, &#39;Waiting for Clarification&#39; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether the Assistance Request is still active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>