ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Login_Access__c.field-meta.xml
<CustomField>
    <fullName>Login_Access__c</fullName>
    <inlineHelpText>Have you provided login access?</inlineHelpText>
    <label>Login Access</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>