ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Open_Question_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Question_Count__c</fullName>
    <inlineHelpText>The number of open questions</inlineHelpText>
    <label>Open Question Count</label>
    <summaryFilterItems>
        <field>Question_Answer__c.IsOpen__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Question_Answer__c.Assistance_Request_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>