ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <defaultValue>&#39;Draft&#39;</defaultValue>
    <inlineHelpText>The phase of the Request for Assistance based on the current stage.</inlineHelpText>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Estimation</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Acceptance</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>