ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Preferred_Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Billing_Currency__c</fullName>
    <inlineHelpText>In which currency would you prefer to be billed in once the work is complete?</inlineHelpText>
    <label>Preferred Billing Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AED - UAE Dirham</fullName>
            </value>
            <value>
                <fullName>AFN - Afghanistan Afghani (New)</fullName>
            </value>
            <value>
                <fullName>ALL - Albanian Lek</fullName>
            </value>
            <value>
                <fullName>AMD - Armenian Dram</fullName>
            </value>
            <value>
                <fullName>ANG - Neth Antilles Guilder</fullName>
            </value>
            <value>
                <fullName>AOA - Angola Kwanza</fullName>
            </value>
            <value>
                <fullName>ARS - Argentine Peso</fullName>
            </value>
            <value>
                <fullName>AUD - Australian Dollar</fullName>
                <default>true</default>
                <label>AUD - Australian Dollar</label>
            </value>
            <value>
                <fullName>AWG - Aruba Florin</fullName>
            </value>
            <value>
                <fullName>AZN - Azerbaijan Manat</fullName>
            </value>
            <value>
                <fullName>BAM - Convertible Marks</fullName>
            </value>
            <value>
                <fullName>BBD - Barbados Dollar</fullName>
            </value>
            <value>
                <fullName>BDT - Bangladesh Taka</fullName>
            </value>
            <value>
                <fullName>BGN - Bulgarian Lev</fullName>
            </value>
            <value>
                <fullName>BHD - Bahraini Dinar</fullName>
            </value>
            <value>
                <fullName>BIF - Burundi Franc</fullName>
            </value>
            <value>
                <fullName>BMD - Bermuda Dollar</fullName>
            </value>
            <value>
                <fullName>BND - Brunei Dollar</fullName>
            </value>
            <value>
                <fullName>BOB - Bolivian Boliviano</fullName>
            </value>
            <value>
                <fullName>BOV - Bolivia Mvdol</fullName>
            </value>
            <value>
                <fullName>BRB - Brazilian Cruzeiro (old)</fullName>
            </value>
            <value>
                <fullName>BRL - Brazilian Real</fullName>
            </value>
            <value>
                <fullName>BSD - Bahamian Dollar</fullName>
            </value>
            <value>
                <fullName>BTN - Bhutan Ngultrum</fullName>
            </value>
            <value>
                <fullName>BWP - Botswana Pula</fullName>
            </value>
            <value>
                <fullName>BYN - Belarusian Ruble</fullName>
            </value>
            <value>
                <fullName>BYR - Belarusian Ruble</fullName>
            </value>
            <value>
                <fullName>BZD - Belize Dollar</fullName>
            </value>
            <value>
                <fullName>CAD - Canadian Dollar</fullName>
            </value>
            <value>
                <fullName>CDF - Franc Congolais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>