ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Preferred_Resource_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Resource_Location__c</fullName>
    <inlineHelpText>In which location would you prefer the resources allocated to this request for assistance to be based</inlineHelpText>
    <label>Preferred Resource Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No preference</fullName>
                <default>true</default>
                <label>No preference</label>
            </value>
            <value>
                <fullName>In my office</fullName>
            </value>
            <value>
                <fullName>In my city</fullName>
            </value>
            <value>
                <fullName>In my state</fullName>
            </value>
            <value>
                <fullName>In my country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>