ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Prior_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Prior_Stage_Name__c</fullName>
    <inlineHelpText>The name of the prior stage excluding Waiting for Clarification (used to control what stage name should be used when all open questions are answered)</inlineHelpText>
    <label>Prior Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>