ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Production_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Production_Deployment__c</fullName>
    <inlineHelpText>If the work is to be completed in a sandbox do you require us to deploy changes to production after testing?</inlineHelpText>
    <label>Production Deployment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>