ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Salesforce_Product__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Product__c</fullName>
    <inlineHelpText>Which Salesforce Product is primarily involved with this change?</inlineHelpText>
    <label>Salesforce Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics Cloud (Einstein Analytics)</fullName>
            </value>
            <value>
                <fullName>Analytics Cloud (Tableau)</fullName>
            </value>
            <value>
                <fullName>App Cloud (Heroku)</fullName>
            </value>
            <value>
                <fullName>App Cloud (Salesforce Platform)</fullName>
            </value>
            <value>
                <fullName>AppExchange Application(s)</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud (CloudCraze)</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud (DemandWare)</fullName>
            </value>
            <value>
                <fullName>Community Cloud</fullName>
            </value>
            <value>
                <fullName>CPQ (Steelbrick)</fullName>
            </value>
            <value>
                <fullName>Integration Cloud (Mule)</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud (ExactTarget)</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud (Pardot)</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
                <default>true</default>
                <label>Sales Cloud</label>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>