ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Sandbox_Name__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Name__c</fullName>
    <inlineHelpText>In which sandbox should the work be done if the environment is a sandbox?</inlineHelpText>
    <label>Sandbox Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>