ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <defaultValue>&#39;Drafting&#39;</defaultValue>
    <inlineHelpText>The current stage in the delivery process for this Request for Assistance.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drafting</fullName>
                <default>true</default>
                <label>Drafting</label>
            </value>
            <value>
                <fullName>Waiting for Estimation</fullName>
            </value>
            <value>
                <fullName>Being Estimated</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Waiting for Development</fullName>
            </value>
            <value>
                <fullName>Being Developed</fullName>
            </value>
            <value>
                <fullName>Waiting for Testing</fullName>
            </value>
            <value>
                <fullName>Being Tested</fullName>
            </value>
            <value>
                <fullName>Waiting for Deployment</fullName>
            </value>
            <value>
                <fullName>Being Deployed</fullName>
            </value>
            <value>
                <fullName>Waiting for Acceptance</fullName>
            </value>
            <value>
                <fullName>Accepted as Complete</fullName>
            </value>
            <value>
                <fullName>Waiting for Clarification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>