ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <inlineHelpText>How will you determine if this request has been completed successfully</inlineHelpText>
    <label>Success Criteria</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>