ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Sync_Details__c.field-meta.xml
<CustomField>
    <fullName>Sync_Details__c</fullName>
    <inlineHelpText>Details about the last sync operation (if any)</inlineHelpText>
    <label>Sync Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>