ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <inlineHelpText>Indicates whether the data has been sync&#39;d to Artisan successfully</inlineHelpText>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not yet sync&#39;d</fullName>
                <default>true</default>
                <label>Not yet sync&#39;d</label>
            </value>
            <value>
                <fullName>Sync pending</fullName>
            </value>
            <value>
                <fullName>Sync successful</fullName>
            </value>
            <value>
                <fullName>Sync failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>