ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <inlineHelpText>A one line overview for the request for assistance</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>