ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <defaultValue>&#39;Medium&#39;</defaultValue>
    <inlineHelpText>How urgent is this request?</inlineHelpText>
    <label>Urgency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>