ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/validationRules/Sandbox_name_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sandbox_name_is_required</fullName>
    <active>true</active>
    <description>Sandbox name is required if the environment is a sandbox</description>
    <errorConditionFormula>AND(
ISPICKVAL(Environment__c,&quot;Sandbox&quot;)
,ISBLANK(Sandbox_Name__c) 
)</errorConditionFormula>
    <errorDisplayField>Sandbox_Name__c</errorDisplayField>
    <errorMessage>A sandbox name must be provided if the target environment is a sandbox</errorMessage>
</ValidationRule>