ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/validationRules/Supported_Billing_Currencies.validationRule-meta.xml
<ValidationRule>
    <fullName>Supported_Billing_Currencies</fullName>
    <active>true</active>
    <description>Force the request billing currency to be one which is supported</description>
    <errorConditionFormula>NOT(ISPICKVAL( Preferred_Billing_Currency__c,&quot;AUD - Australian Dollar&quot;))</errorConditionFormula>
    <errorDisplayField>Preferred_Billing_Currency__c</errorDisplayField>
    <errorMessage>The billing currency must be AUD</errorMessage>
</ValidationRule>