ArtisanAssistCode/force-app/main/default/objects/Assistance_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_Required__c</columns>
    <columns>Urgency__c</columns>
    <columns>Environment__c</columns>
    <columns>Stage_Name__c</columns>
    <columns>Phase__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>